src/test/ui/rfcs/rfc-2093-infer-outlives/explicit-union.stderr
error: rustc_outlives
  --> $DIR/explicit-union.rs:5:1
   |
LL | / union Foo<'b, U: Copy> {
LL | |     bar: Bar<'b, U>
LL | | }
   | |_^
   |
   = note: U: 'b

error: aborting due to previous error

